viewport height fix to keep horizontal scroll at the bottom of the container

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -4,7 +4,7 @@
   width: 100%;
   padding: 1rem 1.75rem 0 1.75rem;
   min-height: 700px;
-  max-height: 95vh;
+  height: 93vh;
   overflow: scroll;
 }
 
@@ -26,7 +26,7 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  max-height: 87vh;
+  max-height: 90vh;
   margin-bottom: 15px;
 }
 
@@ -83,12 +83,12 @@
 }
 
 .kanban-board__card-container--place-holder {
-  height: 200px;
-  max-height: 200px;
+  height: 100px;
+  max-height: 100px;
+  min-height: 100px;
   border: 1px rosybrown solid;
   background-color: salmon;
   border-radius: 5px;
-  margin: 5px 0 5px 0;
   opacity: 0.4;
   box-sizing: border-box;
 }
